--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Page Not Found</title>
-    <meta http-equiv="refresh" content="0; URL='/index.html'">
+    <meta http-equiv="refresh" content="0; URL='/'">
   </head>
   <body>
     Redirecting...
