--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- <link href="./static/css/landing-page.css" rel="stylesheet"> -->
-    <link href="/bedlink/static/css/landing-page.css" rel="stylesheet">
+    <link href="./static/css/landing-page.css" rel="stylesheet">
+    <!-- <link href="/bedlink/static/css/landing-page.css" rel="stylesheet"> -->
 
     <!-- fonts stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.2.0/css/font-awesome.min.css">
@@ -130,10 +130,10 @@
                         Extra charges apply for premium service</small><br><small><big>†</big> There is a charge 29.99
                         to deliver to a specific room</small>
                 </div>
-                <!-- <div class="col-lg-5 col-lg-offset-2 col-sm-6"><br><br><img class="img-responsive img-thumbnail"
-                        src="/static/img/44641169_ml.webp" alt=""></div> -->
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6"><br><br><img class="img-responsive img-thumbnail"
-                        src="/bedlink/static/img/44641169_ml.webp" alt=""></div>
+                        src="/static/img/44641169_ml.webp" alt=""></div>
+                <!-- <div class="col-lg-5 col-lg-offset-2 col-sm-6"><br><br><img class="img-responsive img-thumbnail"
+                        src="/bedlink/static/img/44641169_ml.webp" alt=""></div> -->
             </div>
         </div>
     </div><a name="contact"></a>
