--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,20 @@
                     <div class="intro-message">
                         <h1>Experts In Delivering Sleep</h1>
                         <hr class="intro-divider">
-                        <h3>We Specialise In Handling Bed & Mattress Products</h3><a class="btn btn-success btn-lg"
-                            href="#track">Book Delivery</a>
+                        <h3>We Specialise In Handling Bed & Mattress Products</h3>
+                        <!-- <a class="btn btn-success btn-lg"
+                            href="#track">Book Delivery</a> -->
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-6 col-sm-offset-3 text-center">
+                                    <div class="center-block">
+                                        <div class="text-center">
+                                        <div id="root"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                           
                     </div>
                 </div>
             </div>
@@ -70,11 +82,18 @@
                     <p class="lead">If you have received an SMS from +44 (0) 20 3095 8237 with a reference number, your
                         delivery can now be booked using our self service system. Enter your reference to book a date at
                         your convenience ✅</p>
-                </div><br>
+                </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <div class="panel panel-default">
-                        <div id="root"></div>
-                    </div>
+                    <!-- <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6"> -->
+                        <hr class="section-heading-spacer">
+                        <div class="clearfix"></div>
+                        <h2 class="section-heading">Why use us</h2>
+                        <p class="lead"><i class="fa fa-check-circle-o"></i>&nbsp;&nbsp; Dedicated Service<br><i
+                                class="fa fa-check-circle-o"></i>&nbsp;&nbsp; White Glove Delivery *<br><i
+                                class="fa fa-check-circle-o"></i>&nbsp;&nbsp; 2 Man Delivery Service *<br><i
+                                class="fa fa-check-circle-o"></i>&nbsp;&nbsp; 2 Man Delivery Next Day Service *<br><small>*
+                                extra charges apply for premium services</small></p>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
@@ -93,7 +112,7 @@
             will physically call you to book your delivery or message a date should the call be unsuccessful. Please
             ensure you have shared an up to date mobile contact number with your Vendor/ Seller</div>
     </div>
-    <div class="content-section-b" id="tack">
+    <!-- <div class="content-section-b" id="tack">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
@@ -109,7 +128,7 @@
                 <div class="col-lg-5 col-sm-pull-6 col-sm-6"></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="content-section-a" id="about">
         <div class="container">
             <div class="row">
